### Update 1.8 🎉 (August 9, 2024)

- Logging level is now Info instead of Error.
- Changed log file name from `errors.log` to `app.log`.
- Added support for custom proxy. You can enable and change it in the settings in the "Web Engine" tab.

### Update 1.8-rc5 🎉 (August 7, 2024)

- Added a 30-second timeout for track/playlist downloads to address infinite download issues.
- The message box for new updates no longer displays release notes.
- Updated pytubefix to version 6.9.2.
- File names for downloaded tracks/playlists are now filtered for invalid characters to avoid conflicts.
- Tracks/playlists are now downloaded with audio only, no video.
- Minor code optimization.

### Update 1.8-rc4 🎉 (August 6, 2024)

- Replaced yt-dlp with pytubefix — a fork of pytube with current fixes. This handles music downloads from YouTube perfectly and now the downloads occur without unnecessary console windows.
- Implemented a logger to track and improve error handling.
- Minor interface improvements for a better user experience.
- Further optimizations to enhance application performance.
- Various minor bug fixes and enhancements.

### Update 1.8-rc3 🎉 (August 2, 2024)

- Boosted application performance with a series of optimizations.
- The pop-up menu and toolbar interface have been revamped for a more user-friendly experience.
- Removed the option to download tracks/playlists in mp4 format or open yt-dlp in CMD for custom downloads. Only mp3 download option remains.
- All dependencies (yt-dlp and ffmpeg builds) will now be automatically downloaded, reducing the installer size and speeding up the setup process when using the application from the source code.
- A variety of small enhancements and bug fixes for an even smoother experience.

### Update 1.8-rc2 🎉 (July 27, 2024)

- Improved update verification system for more accuracy and reliability.
- The mini player now correctly maintains its position, ensuring a seamless experience every time you open it.